--- a/trunk/Paginas/crucigrama.html
+++ b/trunk/Paginas/crucigrama.html
@@ -215,6 +215,9 @@
     <script language="JavaScript" SRC="/scripts/crossword.js"></script>
 </head>
 <body>
+    <!--
+        TODO: Darle formato a la pagina
+    -->
     <h1>Crucigrama</h1>
 	{{ nombre }} &nbsp;&nbsp;&nbsp; <a href="{{ return_url }}">Regresar</a><p>
     <div id="crucigrama"></div>
