--- a/trunk/Paginas/sudoku.html
+++ b/trunk/Paginas/sudoku.html
@@ -18,7 +18,7 @@
     </script>
     <script type="text/javascript" src="/scripts/preguntas.js"></script>
 	<script src="/scripts/sudoku.js" language="javascript" type="text/javascript"></script>
-            <style type="text/css">
+    <style type="text/css">
 	<!--
 		@import url("../Style/web.css");
 
@@ -26,210 +26,208 @@
 	</style>
 </head>
 <body>
-<div id = "regresar"> Mi botonsote</div>
-<div id = "ventana">
-<div id = "banner">
-<h1>Sudoku</h1>
-</div>
-{{ nombre }} &nbsp;&nbsp;&nbsp;
-<div id = "datos">
+    <div id = "regresar"><a href="{{ return_url }}">Regresar</a></div>
+    <div id = "ventana">
+        <div id = "banner">
+        <h1>Sudoku</h1>
+        </div>
+        {{ nombre }} &nbsp;&nbsp;&nbsp;
+        <div id = "datosD">
 
-	<table><tr><td valign="top">
-		<form name="f">
-			<table class="root-table"><tr>
-				<td><table class="box box-one"><tr>
+        	<table><tr><td valign="top">
+        		<form name="f">
+        			<table class="root-table"><tr>
+        				<td><table class="box box-one"><tr>
 
-				</tr><tr>
+        				</tr><tr>
 
-					<td class="celler"><div id="pause-hider"></div><input id="c11" type="text" size="1" /></td>
-					<td><input id="c12" type="text" size="1" /></td>
-					<td><input id="c13" type="text" size="1" /></td>
-				</tr><tr>
+        					<td class="celler"><div id="pause-hider"></div><input id="c11" type="text" size="1" /></td>
+        					<td><input id="c12" type="text" size="1" /></td>
+        					<td><input id="c13" type="text" size="1" /></td>
+        				</tr><tr>
 
-					<td><input id="c14" type="text" size="1" /></td>
+        					<td><input id="c14" type="text" size="1" /></td>
 
-					<td><input id="c15" type="text" size="1" /></td>
-					<td><input id="c16" type="text" size="1" /></td>
-				</tr><tr>
+        					<td><input id="c15" type="text" size="1" /></td>
+        					<td><input id="c16" type="text" size="1" /></td>
+        				</tr><tr>
 
-					<td><input id="c17" type="text" size="1" /></td>
-					<td><input id="c18" type="text" size="1" /></td>
-					<td><input id="c19" type="text" size="1" /></td>
-				</tr></table></td>
-				<td><table class="box box-two"><tr>
+        					<td><input id="c17" type="text" size="1" /></td>
+        					<td><input id="c18" type="text" size="1" /></td>
+        					<td><input id="c19" type="text" size="1" /></td>
+        				</tr></table></td>
+        				<td><table class="box box-two"><tr>
 
-				</tr><tr>
-					<td><input id="c21" type="text" size="1" /></td>
-					<td><input id="c22" type="text" size="1" /></td>
-					<td><input id="c23" type="text" size="1" /></td>
-				</tr><tr>
+        				</tr><tr>
+        					<td><input id="c21" type="text" size="1" /></td>
+        					<td><input id="c22" type="text" size="1" /></td>
+        					<td><input id="c23" type="text" size="1" /></td>
+        				</tr><tr>
 
-					<td><input id="c24" type="text" size="1" /></td>
-					<td><input id="c25" type="text" size="1" /></td>
-					<td><input id="c26" type="text" size="1" /></td>
-				</tr><tr>
-					<td><input id="c27" type="text" size="1" /></td>
-					<td><input id="c28" type="text" size="1" /></td>
-					<td><input id="c29" type="text" size="1" /></td>
-				</tr></table></td>
-				<td><table class="box box-three"><tr>
+        					<td><input id="c24" type="text" size="1" /></td>
+        					<td><input id="c25" type="text" size="1" /></td>
+        					<td><input id="c26" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c27" type="text" size="1" /></td>
+        					<td><input id="c28" type="text" size="1" /></td>
+        					<td><input id="c29" type="text" size="1" /></td>
+        				</tr></table></td>
+        				<td><table class="box box-three"><tr>
 
-				</tr><tr>
-					<td><input id="c31" type="text" size="1" /></td>
-					<td><input id="c32" type="text" size="1" /></td>
-					<td><input id="c33" type="text" size="1" /></td>
-
-
-				</tr><tr>
-					<td><input id="c34" type="text" size="1" /></td>
-					<td><input id="c35" type="text" size="1" /></td>
-					<td><input id="c36" type="text" size="1" /></td>
-
-				</tr><tr>
-					<td><input id="c37" type="text" size="1" /></td>
-					<td><input id="c38" type="text" size="1" /></td>
-					<td><input id="c39" type="text" size="1" /></td>
-
-				</tr></table></td>
-			</tr><tr>
-				<td><table class="box box-four"><tr>
-					<td><input id="c41" type="text" size="1" /></td>
-					<td><input id="c42" type="text" size="1" /></td>
-
-					<td><input id="c43" type="text" size="1" /></td>
-				</tr><tr>
-					<td><input id="c44" type="text" size="1" /></td>
-					<td><input id="c45" type="text" size="1" /></td>
-					<td><input id="c46" type="text" size="1" /></td>
-				</tr><tr>
-					<td><input id="c47" type="text" size="1" /></td>
-					<td><input id="c48" type="text" size="1" /></td>
-					<td><input id="c49" type="text" size="1" /></td>
-				</tr></table></td>
-				<td><table class="box box-five"><tr>
-					<td><input id="c51" type="text" size="1" /></td>
-					<td><input id="c52" type="text" size="1" /></td>
-					<td><input id="c53" type="text" size="1" /></td>
-				</tr><tr>
-
-					<td><input id="c54" type="text" size="1" /></td>
-					<td><input id="c55" type="text" size="1" /></td>
-					<td><input id="c56" type="text" size="1" /></td>
-				</tr><tr>
-					<td><input id="c57" type="text" size="1" /></td>
-					<td><input id="c58" type="text" size="1" /></td>
-					<td><input id="c59" type="text" size="1" /></td>
-				</tr></table></td>
-				<td><table class="box box-six"><tr>
-					<td><input id="c61" type="text" size="1" /></td>
-					<td><input id="c62" type="text" size="1" /></td>
-					<td><input id="c63" type="text" size="1" /></td>
-
-				</tr><tr>
-					<td><input id="c64" type="text" size="1" /></td>
-					<td><input id="c65" type="text" size="1" /></td>
-					<td><input id="c66" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c31" type="text" size="1" /></td>
+        					<td><input id="c32" type="text" size="1" /></td>
+        					<td><input id="c33" type="text" size="1" /></td>
 
 
-				</tr><tr>
-					<td><input id="c67" type="text" size="1" /></td>
-					<td><input id="c68" type="text" size="1" /></td>
-					<td><input id="c69" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c34" type="text" size="1" /></td>
+        					<td><input id="c35" type="text" size="1" /></td>
+        					<td><input id="c36" type="text" size="1" /></td>
 
-				</tr></table></td></tr>
-				<tr><td><table class="box box-seven"><tr>
-					<td><input id="c71" type="text" size="1" /></td>
-					<td><input id="c72" type="text" size="1" /></td>
-					<td><input id="c73" type="text" size="1" /></td>
-				</tr><tr>
-					<td><input id="c74" type="text" size="1" /></td>
-					<td><input id="c75" type="text" size="1" /></td>
-					<td><input id="c76" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c37" type="text" size="1" /></td>
+        					<td><input id="c38" type="text" size="1" /></td>
+        					<td><input id="c39" type="text" size="1" /></td>
 
-				</tr><tr>
-					<td><input id="c77" type="text" size="1" /></td>
-					<td><input id="c78" type="text" size="1" /></td>
-					<td><input id="c79" type="text" size="1" /></td>
-				</tr><tr>
+        				</tr></table></td>
+        			</tr><tr>
+        				<td><table class="box box-four"><tr>
+        					<td><input id="c41" type="text" size="1" /></td>
+        					<td><input id="c42" type="text" size="1" /></td>
 
-				</tr></table></td>
-				<td><table class="box box-eight"><tr>
-					<td><input id="c81" type="text" size="1" /></td>
-					<td><input id="c82" type="text" size="1" /></td>
-					<td><input id="c83" type="text" size="1" /></td>
-				</tr><tr>
-					<td><input id="c84" type="text" size="1" /></td>
+        					<td><input id="c43" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c44" type="text" size="1" /></td>
+        					<td><input id="c45" type="text" size="1" /></td>
+        					<td><input id="c46" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c47" type="text" size="1" /></td>
+        					<td><input id="c48" type="text" size="1" /></td>
+        					<td><input id="c49" type="text" size="1" /></td>
+        				</tr></table></td>
+        				<td><table class="box box-five"><tr>
+        					<td><input id="c51" type="text" size="1" /></td>
+        					<td><input id="c52" type="text" size="1" /></td>
+        					<td><input id="c53" type="text" size="1" /></td>
+        				</tr><tr>
 
-					<td><input id="c85" type="text" size="1" /></td>
-					<td><input id="c86" type="text" size="1" /></td>
-				</tr><tr>
-					<td><input id="c87" type="text" size="1" /></td>
-					<td><input id="c88" type="text" size="1" /></td>
-					<td><input id="c89" type="text" size="1" /></td>
-				</tr><tr>
+        					<td><input id="c54" type="text" size="1" /></td>
+        					<td><input id="c55" type="text" size="1" /></td>
+        					<td><input id="c56" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c57" type="text" size="1" /></td>
+        					<td><input id="c58" type="text" size="1" /></td>
+        					<td><input id="c59" type="text" size="1" /></td>
+        				</tr></table></td>
+        				<td><table class="box box-six"><tr>
+        					<td><input id="c61" type="text" size="1" /></td>
+        					<td><input id="c62" type="text" size="1" /></td>
+        					<td><input id="c63" type="text" size="1" /></td>
 
-				</tr></table></td>
-				<td><table class="box box-nine"><tr>
-					<td><input id="c91" type="text" size="1" /></td>
-					<td><input id="c92" type="text" size="1" /></td>
-					<td><input id="c93" type="text" size="1" /></td>
-
-				</tr><tr>
-
-					<td><input id="c94" type="text" size="1" /></td>
-					<td><input id="c95" type="text" size="1" /></td>
-					<td><input id="c96" type="text" size="1" /></td>
-
-				</tr><tr>
-					<td><input id="c97" type="text" size="1" /></td>
-					<td><input id="c98" type="text" size="1" /></td>
-					<td><input id="c99" type="text" size="1" /></td>
-
-				</tr><tr>
-
-				</tr></table>
-			</td></tr></table>
-		</form>
-		<div id="powered-by">Powered by <a href="http://www.bin-co.com/javascript/sudoku/">Online Sudoku</a></div>
-
-	</td><td valign="top" id="control-area" align="left" width="300">
-		<input type="button" class="control-button" onClick="checker()" value="Ya terminé" /><br />
-		<input type="button" class="control-button" onClick="solve()" value="¡Me rindo!" /><br /><br />
+        				</tr><tr>
+        					<td><input id="c64" type="text" size="1" /></td>
+        					<td><input id="c65" type="text" size="1" /></td>
+        					<td><input id="c66" type="text" size="1" /></td>
 
 
-		<input type="button" class="control-button" onClick="reloadGame()" value="Reiniciar el juego" /><br />
-		<input type="button" class="control-button" onClick="newGame()" value="Nuevo juego" />
+        				</tr><tr>
+        					<td><input id="c67" type="text" size="1" /></td>
+        					<td><input id="c68" type="text" size="1" /></td>
+        					<td><input id="c69" type="text" size="1" /></td>
 
-		<hr />
-		<div class="option-item">
-			<label for="difficulty">Dificultad</label>
-			<select name="difficulty" id="difficulty">
-				<option value="3">Difícil</option>
-				<option value="4" selected="selected">Normal</option>
-				<option value="5">Fácil</option>
-			</select>
-		</div>
+        				</tr></table></td></tr>
+        				<tr><td><table class="box box-seven"><tr>
+        					<td><input id="c71" type="text" size="1" /></td>
+        					<td><input id="c72" type="text" size="1" /></td>
+        					<td><input id="c73" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c74" type="text" size="1" /></td>
+        					<td><input id="c75" type="text" size="1" /></td>
+        					<td><input id="c76" type="text" size="1" /></td>
 
-		<hr />
-		<br />
-		<div id="cheats">
-			<input type="button" class="control-button" value="Mostrar celda" onClick="revealCell()" />
-		</div>
+        				</tr><tr>
+        					<td><input id="c77" type="text" size="1" /></td>
+        					<td><input id="c78" type="text" size="1" /></td>
+        					<td><input id="c79" type="text" size="1" /></td>
+        				</tr><tr>
 
-		<div id="info">
-			<span id="timer">00:00</span>
+        				</tr></table></td>
+        				<td><table class="box box-eight"><tr>
+        					<td><input id="c81" type="text" size="1" /></td>
+        					<td><input id="c82" type="text" size="1" /></td>
+        					<td><input id="c83" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c84" type="text" size="1" /></td>
 
-			<input type="button" id="timer_control" onClick="toggleTimer()" value="Pause" />
-		</div>
-	</td></tr></table>
+        					<td><input id="c85" type="text" size="1" /></td>
+        					<td><input id="c86" type="text" size="1" /></td>
+        				</tr><tr>
+        					<td><input id="c87" type="text" size="1" /></td>
+        					<td><input id="c88" type="text" size="1" /></td>
+        					<td><input id="c89" type="text" size="1" /></td>
+        				</tr><tr>
 
-	<div id="display_area"></div>
+        				</tr></table></td>
+        				<td><table class="box box-nine"><tr>
+        					<td><input id="c91" type="text" size="1" /></td>
+        					<td><input id="c92" type="text" size="1" /></td>
+        					<td><input id="c93" type="text" size="1" /></td>
+
+        				</tr><tr>
+
+        					<td><input id="c94" type="text" size="1" /></td>
+        					<td><input id="c95" type="text" size="1" /></td>
+        					<td><input id="c96" type="text" size="1" /></td>
+
+        				</tr><tr>
+        					<td><input id="c97" type="text" size="1" /></td>
+        					<td><input id="c98" type="text" size="1" /></td>
+        					<td><input id="c99" type="text" size="1" /></td>
+
+        				</tr><tr>
+
+        				</tr></table>
+        			</td></tr></table>
+        		</form>
+        		<div id="powered-by">Powered by <a href="http://www.bin-co.com/javascript/sudoku/">Online Sudoku</a></div>
+
+        	</td><td valign="top" id="control-area" align="left" width="300">
+        		<input type="button" class="control-button" onClick="checker()" value="Ya terminé" /><br />
+        		<input type="button" class="control-button" onClick="solve()" value="¡Me rindo!" /><br /><br />
 
 
+        		<input type="button" class="control-button" onClick="reloadGame()" value="Reiniciar el juego" /><br />
+        		<input type="button" class="control-button" onClick="newGame()" value="Nuevo juego" />
 
-</div>
-Todos los derechos reservados.
-</div>
+        		<hr />
+        		<div class="option-item">
+        			<label for="difficulty">Dificultad</label>
+        			<select name="difficulty" id="difficulty">
+        				<option value="3">Difícil</option>
+        				<option value="4" selected="selected">Normal</option>
+        				<option value="5">Fácil</option>
+        			</select>
+        		</div>
+
+        		<hr />
+        		<br />
+        		<div id="cheats">
+        			<input type="button" class="control-button" value="Mostrar celda" onClick="revealCell()" />
+        		</div>
+
+        		<div id="info">
+        			<span id="timer">00:00</span>
+
+        			<input type="button" id="timer_control" onClick="toggleTimer()" value="Pause" />
+        		</div>
+        	</td></tr></table>
+
+        	<div id="display_area"></div>
+
+        </div>
+        Todos los derechos reservados.
+    </div>
 
 </body>
 </html>
