--- a/Paginas/memorama.html
+++ b/Paginas/memorama.html
@@ -9,26 +9,27 @@
     <meta name="author" content="Salvador Gonzalez">
     <script type="text/javascript" src="/scripts/jquery.js"></script>
     <script type="text/javascript">
-        var hacerPreguntas = true;
-        var img1 = 1;
-        var img2 = 2;
-        var img3 = 3;
-<<<<<<< .mine
+        var hacerPreguntas = {{ hacerPreguntas }};
+        var img1 = {{ img1 }};
+        var img2 = {{ img2 }};
+        var img3 = {{ img3 }};
 		var preguntaDatos=[ ["Cristobal Colón descubrió América","Cristobal ______ descubrio America", "Colon", "alternativa1", "alternativa2"],
 		["El tec fue fundado por Eugenio Garza Sada","El ____ fue fundado por Eugenio Garza Sada", "tec", "alternativa1","alternativa2"] ];
-        var color1 = "red";
-        var color2 = "red";
-        var color3 = "blue";
-=======
->>>>>>> .r56
         var preguntasTotales = 3;
-		var tipoDePreguntas=2;
+		var tipoDePreguntas= {{ tipoDePreguntas }};
     </script>
     <script type="text/javascript" src="/scripts/preguntas.js"></script>
     <script type="text/javascript" src="/scripts/memorama.js"></script>
     <!-- Date: 2008-10-06 -->
+    <style type="text/css">
+	<!--
+		@import url("/style/web.css");
+
+	-->
+	</style>
 </head>
 <body>
+    <!--
     <h1>Memorama</h1>
     {{ nombre }} &nbsp;&nbsp;&nbsp; <a href="{{ return_url }}">Regresar</a><p>
     <div id="memorama"></div>
@@ -40,6 +41,27 @@
     </div>
     <div id="finishScreen"><img src="/imagenes/felicidades.jpg"
 width="300" height="225"></div>
-    
+-->
+
+
+<div id = "regresar"><a href="{{ return_url }}">Regresar</a></div>
+<div id = "ventana">
+<div id = "banner">
+ <h1>Memorama</h1>
+</div>
+{{ nombre }} &nbsp;&nbsp;&nbsp;
+<div id = "datos">
+    <div id="memorama"></div>
+    <div id="bienvenida">
+        Nivel:<br>
+        <input type="submit" id="facil" value="facil"></input><br>
+        <input type="submit" id="medio" value="medio"></input><br>
+        <input type="submit" id="dificil" value="dificil"></input><br>
+    </div>
+    <div id="finishScreen"><img src="/imagenes/felicidades.jpg"
+width="300" height="225"></div>
+</div>
+</div>
+
 </body>
 </html>
