--- a/trunk/Paginas/memorama.html
+++ b/trunk/Paginas/memorama.html
@@ -30,12 +30,12 @@
 	</style>
 </head>
 <body>
-<div id = "regresar"  onMouseOver="hacerBoton('{{return_url}}', $(this));">Regresar</div>
+<div id = "regresar"  onMouseOver="hacerBoton('{{return_url}}', $(this));"></div>
 <div id = "ventana">
+    <div class="TituloDerivado">{{ nombre }}</div>
 <div id = "banner">
  <h1>Memorama</h1>
 </div>
-{{ nombre }} &nbsp;&nbsp;&nbsp;
 <div id = "datos">
     <div id="memorama"></div>
     <div id="bienvenida">
