--- a/trunk/Paginas/inicio.html
+++ b/trunk/Paginas/inicio.html
@@ -43,7 +43,7 @@
             }
         });
     </script>
-    <link href="/style/web.css" rel="stylesheet" type="text/css" />
+    <link href="../style/web.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div id = "regresar"  onMouseOver="hacerBoton('{{return_url}}', $(this));"></div>
