--- a/trunk/Paginas/sudoku.html
+++ b/trunk/Paginas/sudoku.html
@@ -27,11 +27,11 @@
 	</style>
 </head>
 <body>
-    <div id = "regresar"  onMouseOver="hacerBoton('{{return_url}}', $(this));">Regresar</div>
+    <div id = "regresar"  onMouseOver="hacerBoton('{{return_url}}', $(this));"></div>
     <div id = "ventana">
         <div id = "banner">
-        <h1>Sudoku</h1>
-        </div>
+        <h1 align="center">Sudoku</h1>
+      </div>
         {{ nombre }} &nbsp;&nbsp;&nbsp;
         <div id = "datosD">
 
