--- a/trunk/Paginas/sudoku.html
+++ b/trunk/Paginas/sudoku.html
@@ -27,7 +27,7 @@
 	</style>
 </head>
 <body>
-    <div id = "regresar"  onMouseOver="hacerBoton('{{return_url}}', $(this));"></div>
+    <div id = "regresar"  onclick="window.location = '{{return_url}}';"></div>
     <div id = "ventana">
         <div id = "banner">
         <h1 align="center">Sudoku</h1>
